themes/gograz/static/sass/style.scss
@import url("https://fonts.googleapis.com/css?family=Roboto:400,400italic,700");

body {
    font-family: "Roboto";
    font-size:62.5%;
    margin: 0;
    padding: 0;
}

h1 {
    margin-bottom: 4rem;
    color: #375EAB;
}

a {
    color: #375EAB;
}

#layout > header {
    background: #E0EBF5;
    padding: 10px;
    margin-bottom: 20px;
}

#layout > header i {
    font-style: italic;
    font-size: 1.2rem;
    color: #333;
}

#layout > header a {
    text-decoration: none;
}

#layout > header a:hover {
    text-decoration: underline;
}

#layout > header > h1 {
    width: 80%;
    max-width: 600px;
    margin: auto;
    font-size: 3rem;
}

#layout.node > .content,
#layout > #content {
    width: 80%;
    max-width: 600px;
    margin: auto;
}

.content {
    font-size: 1.4rem;
    line-height: 2.2rem;
}

#content h1 {
    text-align: center;
    font-size: 1.8rem;
    line-height: 2.6rem;
    margin: 0;
}

h2 {
    font-size: 1.6rem;
    color: #375EAB;
    margin-bottom: 0;
}

ul {
    margin: 0.5rem 0rem;
}

footer {
    text-align: center;
    margin: 10px 0;
    font-size: 1.1rem;
}

aside {
    background: #EFEFEF;
    padding: 0.5rem;
    margin: 0.5rem 0;
    font-size: 1.2rem;
}

aside dl {
    overflow: hidden;
    width: 100%;
    margin: 0.5rem 0 0 0;
}

aside dl:first-child {
    margin: 0;
}

aside dt, aside dd {
    display: block;
    float: left;
}

aside dt {
    font-weight: bold;
    width: 30%;
}

aside dd {
    width: 70%;
    margin: 0;
}

.member {
    display: inline-block;
    line-height: 40px;
    margin-right: 2px;
    border: 1px solid #375EAB;
    padding: 2px;

    img {
        display: block;
        max-width: 40px;
        max-height: 40px;
        line-height: 40px;
    }
}

